syntax = "proto3";

package user;

option go_package = "pkg/messenger_users_api";

service UserService {
  rpc CreateUser (CreateRequest) returns (CreateResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message CreateRequest {
  string login = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
}

message CreateResponse {
  string success = 1;
}

message GetUserRequest {
  optional int64 id = 1;
  optional string login = 2;
  optional string first_name = 3;
  optional string last_name = 4;
  optional string email = 5;
  optional string phone = 6;
}

message GetUserResponse {
  message User {
    int64 id = 1;
    string login = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    string phone = 6;
  }

  repeated User users = 1;
}